--- a/style.css
+++ b/style.css
@@ -1,100 +1,83 @@
 *{
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   
+    box-sizing: border-box;
 }
 body{
-    background: #0c192c49;
+    font-family: 'Outfit';
+    background: linear-gradient(#ffdad5, #fff7f9);
 }
-nav{
-    background-color: #0c111c;
-  
+.contact-container{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
-.image{
+.contact-left{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.contact-left-title h2{
+    font-weight: 600;
+    font-size: 40px;
+    margin-bottom: 5px;
+    color: #a363aa;
+}
+.contact-left-title hr{
+    border: none;
+    height: 5px;
     width: 120px;
-    float: left;
-    border-radius: 50%;
-    padding-left: 20px;
-    padding-top: -30px;
+    background-color: #a363aa;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
-ul{
-    list-style-type: none;
-    margin-left: 40%;
-    padding-top: 35px;
-    padding-bottom: 45px;
+.contact-input{
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 50px;
 }
-.link {
-    margin-left: 55px;
-    color: #ffffff;
-    font-size: 25px;
-    font-weight: bolder;    
-}
-li{
-    text-align: center;
-    display: inline;
-}
-li .link:hover {
-    background-color: #ff0066;
-    transition: 0.4s;
+.contact-left textarea{
+    height: 140px;
+    padding-top: 15px;
     border-radius: 20px;
-    color: rgba(255, 255, 255, 0.904);
-    padding: 8px;
-  }
-  button{
-    padding: 10px;
-    margin-right: 30px;
-    float: right;
-    margin-top: -10px;
-    border-radius: 20px;
-    background: #ff0066;
+}
+.contact-input:focus{
+    border: 2px solid #ff994f;
+}
+.contact-input::placeholder{
+    color: #a9a9a9;
+}
+.contact-left button{
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
     color: #fff;
-    font-size: larger;
-    font-weight: 700;
-  }
- 
-  button:hover{
-    background-color: #fff;
-    transition: 0.2s;
-    border-radius: 20px;
-    color: #ff0066;
-    padding: 14px;
+    gap: 10px;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(270deg, #ff994f, #fa6d86);
     cursor: pointer;
-
-    
-  }
-  main h2{
-    text-align: center;
-    font-size: 50px;
-    padding-top: 150px;
-    color: white;
-  }
-  span{
-    color: #ff0066;
-  }
-  h3{
-    text-align: center;
-    font-size: 28px;
-    padding-top: 15px;
-    color: white;
-  }
-  p{
-    text-align: center;
-    font-size: 20px;
-    padding-top: 15px;
-    color: white;
-  }
- footer p{
-    padding-top: 120px;
-    padding: 14px;
-    color: rgba(255, 255, 255, 0.685);
-    background-color: #0c111c;
- }
- .last{
-    padding-bottom: 120px;
- }
- main{
-    background: #0c192c;
- }
+    align-items: flex-start;
+}
+.contact-left button img{
+    height: 15px;
+}
+.contact-right img{
+    width: 500px;
+}
+@media (max-width: 800px) {
+    .contact-input{
+        width: 80vw;
+    }
+    .contact-right{
+        display: none;
+    }
+}
